--- a/src/com/yuntong/config/yuntong-data-context.properties
+++ b/src/com/yuntong/config/yuntong-data-context.properties
@@ -13,7 +13,7 @@ yuntong.persistence.datasource=2
 # Database Type
 # Valid values are:
 #     HSQL(Only for embedded database), MYSQL, POSTGRESQL, ORACLE, DB2
-yuntong.persistence.type=ORACLE
+yuntong.persistence.type=MYSQL
 
 #
 # Database Dialect
@@ -22,7 +22,7 @@ yuntong.persistence.type=ORACLE
 #     POSTGRESQL: org.hibernate.dialect.PostgreSQL82Dialect
 #     ORACLE: org.hibernate.dialect.Oracle10gDialect
 #     DB2: org.hibernate.dialect.DB2Dialect
-yuntong.persistence.dialect=org.hibernate.dialect.Oracle10gDialect
+yuntong.persistence.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #
 # JNDI Name
@@ -37,7 +37,7 @@ yuntong.persistence.jndiName=
 #     For ORACLE: oracle.jdbc.driver.OracleDriver
 #     For DB2: com.ibm.db2.jcc.DB2Driver
 # Required for Application Managed JDBC Pool DataSource
-yuntong.persistence.driver=oracle.jdbc.driver.OracleDriver
+yuntong.persistence.driver=com.mysql.jdbc.Driver
 
 #
 # JDBC URL
@@ -47,18 +47,18 @@ yuntong.persistence.driver=oracle.jdbc.driver.OracleDriver
 #     For ORACLE: jdbc:oracle:thin:@host:port:sid
 #     For DB2: jdbc:db2://host:port/database
 # Required for Application Managed JDBC Pool DataSource
-yuntong.persistence.url=jdbc:oracle:thin:@172.17.1.104:1521:ORCL
+yuntong.persistence.url= jdbc:mysql://123.56.228.198:3306/yuntong
 
 #
 # Database User Name
 # Required for Application Managed JDBC Pool DataSource
-yuntong.persistence.username=scott
+yuntong.persistence.username=root
 
 
 #
 # Database Password
 # Required for Application Managed JDBC Pool DataSource
-yuntong.persistence.password=tiger
+yuntong.persistence.password=Tumbleweed%123456
 
 #
 # JDBC Pool Min Size
